Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-7065

Assertion failure 'ProtoPte <= Vad->LastContiguousPte' during NtMapViewOfSection test

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • 0.3.16
    • NTCore
    • None

    Description

      Can be seen on testbot, e.g. http://build.reactos.org:8010/builders/Linux_AMD64_1%20KVM-Test/builds/2688/steps/test/logs/stdio

      Running Wine Test, Module: ntdll, Test: NtMapViewOfSection
      (/srv/buildbot_cmake/full_cmake/build/ntoskrnl/mm/ARM3/section.c:2523) Mapping protection is incompatible
      Assertion 'ProtoPte <= Vad->LastContiguousPte' failed at /srv/buildbot_cmake/full_cmake/build/ntoskrnl/mm/ARM3/../ARM3/miarm.h line 1371
      
      Entered debugger on embedded INT3 at 0x0008:0x80928316.
      kdb:>
      bt
      Eip:
      <NTOSKRNL.EXE:128317 (/srv/buildbot_cmake/full_cmake/build/lib/rtl/i386/debug_asm.S:35 (_DbgBreakPoint@0))>
      Frames:
      <NTOSKRNL.EXE:c7ff0 (ReactOS/ntoskrnl/mm/ARM3/../ARM3/miarm.h:1371 (NtAllocateVirtualMemory@24))>
      <NTOSKRNL.EXE:113cbc (ReactOS/ntoskrnl/ke/i386/traphdlr.c:1619 (@KiFastCallEntryHandler@8))>
      <NTOSKRNL.EXE:3ca5 (/srv/buildbot_cmake/full_cmake/build/ntoskrnl/ke/i386/trap.s:150 (_KiFastCallEntry))>
      <ntdll.dll:b249 (/srv/buildbot_cmake/full_cmake/build/dll/ntdll/dispatch/i386/dispatch.S:255 (_KiIntSystemCall@0))>
      <ntdll_apitest.exe:6802 (ReactOS/modules/rostests/apitests/ntdll/NtMapViewOfSection.c:461 (func_NtMapViewOfSection))>
      <ntdll_apitest.exe:16ac8 (ReactOS/include/reactos/wine/test.h:560 (run_test))>
      <ntdll_apitest.exe:16cdf (ReactOS/include/reactos/wine/test.h:618 (main))>
      <ntdll_apitest.exe:17375 (ReactOS/lib/sdk/crt/startup/crtexe.c:310 (__tmainCRTStartup))>
      <ntdll_apitest.exe:173d7 (ReactOS/lib/sdk/crt/startup/crtexe.c:168 (WinMainCRTStartup))>
      <kernel32.dll:fa98 (ReactOS/dll/win32/kernel32/client/proc.c:466 (BaseProcessStartup@4))>
      <00000000>
      kdb:>

      [SYSREG] Rebooting VM (retry 2)

      The call to NtAllocateVirtualMemory in line 110 fails. Comment: /* Try to commit a range larger than the section */

      Attachments

        Activity

          People

            zefklop jgardou
            ThFabba ThFabba
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: