[NTDLL_APITEST] CORE-7065 #comment Temporarily disable the crashing test to get meaningful testbot results again.

svn path=/trunk/; revision=58708